CLOUD-3089 - BUGFIX: cluster selector alignment in safari

--- a/app/cluster-select/cluster-select.less
+++ b/app/cluster-select/cluster-select.less
@@ -9,13 +9,10 @@ cluster-select {
   text-decoration: initial;
 
   > span {
-    display: inline-block;
     overflow: hidden;
     white-space: nowrap;
     max-width: 190px;
     text-overflow: ellipsis;
-    position: relative;
-    top: 8px;
   }
 }
 
